src/config/email/smtp/snapshots/roadster__config__email__smtp__tests__message_builder_from_email@case_1.snap
---
source: src/config/email/smtp.rs
expression: msg_builder
---
MessageBuilder {
    headers: Headers {
        headers: [
            HeaderValue {
                name: HeaderName(
                    "From",
                ),
                raw_value: "foo@example.com",
                encoded_value: "foo@example.com",
            },
        ],
    },
    envelope: None,
    drop_bcc: true,
}
