src/config/email/smtp/snapshots/roadster__config__email__smtp__tests__serialization@case_02.snap
---
source: src/config/email/smtp/mod.rs
expression: smtp
---
[connection]
host = 'smtp.example.com'
username = 'username'
password = 'password'
