src/config/email/smtp/snapshots/roadster__config__email__smtp__tests__serialization@case_03.snap
---
source: src/config/email/smtp/mod.rs
expression: smtp
---
[connection]
host = 'smtp.example.com'
port = 465
username = 'username'
password = 'password'
