src/config/email/smtp/snapshots/roadster__config__email__smtp__tests__serialization@case_1.snap
---
source: src/config/email/smtp.rs
expression: smtp
---
[connection]
uri = 'smtps://username:password@smtp.example.com:425'
