src/config/email/smtp/snapshots/roadster__config__email__smtp__tests__serialization@case_2.snap
---
source: src/config/email/smtp.rs
expression: smtp
---
[connection]
host = 'smtp.example.com'
username = 'username'
password = 'password'
